--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index",
-    "dev": "nodemon index",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./src/index",
+    "dev": "nodemon ./src/index",
+    "test": "mocha",
     "lint": "eslint .",
     "lint-fix": "eslint --fix ."
   },
@@ -31,21 +31,22 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.0",
-    "mocha": "^10.0.0",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
-    "node-fetch": "^3.2.4",
-    "sequelize": "^6.20.0",
-    "swagger-jsdoc": "^6.2.1",
-    "swagger-ui-express": "^4.4.0"
+    "sequelize": "^6.20.0"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "eslint": "^8.16.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-promise": "^6.0.0",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.16"
   }
 }
