--- a/.env.sample
+++ b/.env.sample
@@ -6,4 +6,7 @@ MYSQL_PASS=pass
 MYSQL_DB_NAME=namedb
 SECRET=secretpass
 EXPIRESIN=60*60*60*24
-SENDGRID_API_KEY=sendgridkey
+EMAIL_USER=user
+EMAIL_PASS=pass
+EMAIL_HOST=host
+EMAIL_PORT=port
