--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
   },
   "homepage": "https://github.com/santieb/alkemy-node#readme",
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -36,6 +35,7 @@
     "mariadb": "^3.0.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.5",
     "sequelize": "^6.20.0"
   },
   "devDependencies": {
